--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,7 @@ Federated Learning is a promising solution for distributed machine learning  tha
 However, the lack of knowledge by the overarching system of what data an individual user possesses, opens this system up to vulnerabilities. Attackers can act maliciously, faulty users can damage their local model, and models are at risk of theft.
 
 So, ensuring that the aggregation strategy is robust, is of paramount importance.
-Unfortunately, current methods of robust aggregation lack full understanding of this space and so aren't able to fully protect the users from all of the variety of attacks present.
+Unfortunately, current methods of robust aggregation lack full understanding of this space and so are not able to fully protect the users from all of the variety of attacks present.
 \\ \\
 This paper will cover various forms of robust aggregation and attacks, as well as some more simple methods to enhance current existing approaches.
 It will also introduce a solution to fully enhancing robust aggregation (from more attack vectors) called FedPADRC, which uses clustering and other techniques to enhance the robust aggregation process.
@@ -49,7 +49,7 @@ Thank you also to Dr Jonathan Passerat-Palmbach [\ref{jon}] for also hosting thi
 \\ \\
 The notes, slides and general lecture material/teaching from modules such as Privacy Engineering and Introduction to Machine Learning have proved to be invaluable in my general understanding of Machine Learning and Privacy Preserving techniques. So, I would like to thank the relevant lecturers for this.
 \\ \\
-There are also my flatmates, who helped try and make sure that what I wrote isn't illegible and incomprehensible, as if it was written by an enthusiastic child telling a story.
+There are also my flatmates, who helped try and make sure that what I wrote is not illegible and incomprehensible, as if it was written by an enthusiastic child telling a story.
 \\ \\
 I would also like to thank my family for supporting me through my entire education and being the reason that it has all culminated with me sitting here writing this today.
 \\ \\
