--- a/background/ML.tex
+++ b/background/ML.tex
@@ -135,7 +135,7 @@ Instead we go for different architecture that consists of three distinct types o
     The latter allows for overlap of the pixels but a kernel size above 3x3 can result in greatly decreased performance. 
     Pooling is used to help detect patterns in images that are usually far too big for smaller kernels to detect.
     
-    \item \textbf{Fully-Connected Layer:} this acts like a typical NN and will try and form scores for the relevant classes/predictions based while connected in the standard way of being connected to all the neurons of the previous layer.
+    \item \textbf{Fully-Connected Layer:} this acts like a typical NN and will try and form scores for the relevant classes/predictions while being connected to all the neurons of the previous layer.
 \end{enumerate}
 An example of how these layers come together and form a CNN is below:
 \begin{figure}[htbp]
@@ -145,7 +145,7 @@ An example of how these layers come together and form a CNN is below:
     \label{fig:cnn-layers}
 \end{figure}
 
-For simple datasets like MNIST (where the dimensions of the images are only 28x28 and the image itself is fairly basic) we don't need a particularly complex NN beyond having the initial layer contain 784 (28x28) weights and so it doesn't necessarily benefit from a CNN. 
+For simple datasets like MNIST (where the dimensions of the images are only 28x28 and the image itself is fairly basic) we do not need a particularly complex NN beyond having the initial layer contain 784 (28x28) weights and so it does not necessarily benefit from a CNN. 
 For something like the MedMNIST \cite{medmnist} datasets, they are not in a higher dimension but are of higher complexity (i.e. more features are held within each image) than that of standard MNIST and so more greatly benefit from the use of a CNN. 
 Other examples of datasets that benefit this way are FashionMNIST \cite{fashion} and CIFAR-10 \cite{cifar}.
 \\ \\
