--- a/background/background.tex
+++ b/background/background.tex
@@ -4,7 +4,7 @@ This project makes the following assumptions:
 
 \begin{enumerate}
     \item The attacks that are carried out only interfere with the models, their parameters and their data. They do not involve network security based attacks or attacks that involve external agents in manners such as a Distributed Denial of Service (DDOS) attack.
-    This is because these external agents are not unique to Federated Learning and have nothing to do with its process or how it is implemented.
+    This is because these external agents are not unique to Federated Learning and have nothing to do with its process or how it is implemented in the context of this project.
     
     \item The Machine Learning Models' hyperparameters are optimal to the datasets we test on. Further, that we do not require additional fine tuning for it to achieve optimal performance in the context of a distributed system. Fine tuning the hyper-parameters of these models specifically is out of the scope for this project.
 \end{enumerate}
