--- a/background/privacy.tex
+++ b/background/privacy.tex
@@ -3,7 +3,7 @@ Whether this is through monitoring app/website usage or simply tracking what peo
 \\ \\
 However, data can stray beyond this into more truly personal information such as that of the medical nature.
 This is trickier to deal with from an analytical perspective, given that medical data is very tightly controlled and restricted due to its highly sensitive nature and the governing bodies controlling it are usually very unwilling to share. 
-Now in the past this wasn't really an issue as typically only medical professionals of the governing organisation (e.g. the National Health Service (NHS)) would want access to this data and actually have any good reason. 
+Now in the past this was not really an issue as typically only medical professionals of the governing organisation (e.g. the National Health Service (NHS)) would want access to this data and actually have any good reason. 
 So it was very easy and efficient to deny any external access. 
 However, we now live in a world where the prevalence of ML has made external researchers' access to data increasingly valuable to society. 
 Users, beyond medical professionals, want access to this highly sensitive data to try and develop new, beneficial tools.
@@ -15,15 +15,15 @@ So several methods of trying to preserve the privacy of the users of this data h
 
 \subsection{K-Anonymisation}
 The idea behind anonymising data is to not be able to link an individual person's data record with their actual identity in a given dataset. This gives reassurance to the individual, whose private data has been given to the system, that there will be no risk of association and its subsequent repercussions. This depersonalises data, so that is able to be used beyond the governing owner of that data. 
-This is hugely beneficial to both parties and is a great starting point for preserving the privacy of the data. 
+It is hugely beneficial to both parties and is a great starting point for preserving the privacy of the data. 
 \\ \\
 However, this is not as simple as it sounds and many attempts to pseudo-anonymise the data have resulted in people able to link medical data with more available (and less sensitive) data like a voter list \cite{failed_anonymisation}.
 \\ \\
-Even if that weren't the case, you get certain attributes that when taken together are potentially able to identify a person. These are called quasi-identifiers. 
+Even if that was not the case, there are certain attributes that when taken together are potentially able to identify a person. These are called quasi-identifiers. 
 An example would be if you knew their post code and their date-of-birth, you could potentially figure out a disease they have if no one in that postcode shares that date-of-birth with them. e.g. id=3 in Table \ref{tbl:pre-anon}.
 \\ \\
 A way to tackle these is through the use of k-anonymising the data. A table of data is k-anonymous if every record in the table is indistinguishable from at least k-1 other records, with respect to every set of quasi-identifiers (not something that is itself a unique identifier, but when paired with other quasi-identifiers it can identify someone). 
-The 2 styles of doing this are perturbative methods and non-perturbative methods but seeing as perturbative methods (e.g. adding noise) does not retain data integrity, we won't be considering it. 
+The 2 styles of doing this are perturbative methods and non-perturbative methods but seeing as perturbative methods (e.g. adding noise) does not retain data integrity, we will not be considering it. 
 Two main ways of achieving k-anonymity for non-perturbative methods are generalising the data (replacing attribute values with something more generalised e.g. 54321 $\longrightarrow$ 54***) and suppression (deletion of row or column e.g. row with id=3 in Table \ref{tbl:pre-anon}).
 \begin{center}
     \begin{longtable}{ |c|c|c|c|c| }
@@ -52,7 +52,7 @@ Two main ways of achieving k-anonymity for non-perturbative methods are generali
     \end{longtable}
 \end{center}
 
-The data is still susceptible to homogeneity and semantic attacks [Table \ref{tbl:2-anon}] and while {l-Diversity} can fix the former there is never any guarantee that a dataset is 100\% completely and truly anonymised. With k-anonymisation, a specific data record can't be identified with any given individual but information can still be inferred. The governing body behind the data sometimes has to make a decision about what is an acceptable level of anonymisation without completely destroying any utility or functionality behind it. There are some techniques being investigated through clustering of the data to help minimise information loss \cite{anon_cluster} but again, these only go so far. It should also be noted that k-anonymity can only work on table and record style data, and will be limited in the case of images.
+The data is still susceptible to homogeneity and semantic attacks [Table \ref{tbl:2-anon}] and while {l-Diversity} can fix the former there is never any guarantee that a dataset is 100\% completely and truly anonymised. With k-anonymisation, a specific data record cannot be identified with any given individual but information can still be inferred. The governing body behind the data sometimes has to make a decision about what is an acceptable level of anonymisation without completely destroying any utility or functionality behind it. There are some techniques being investigated through clustering of the data to help minimise information loss \cite{anon_cluster} but again, these only go so far. It should also be noted that k-anonymity can only work on table and record style data, and will be limited in the case of images.
 
 
 \subsection{Differential Privacy}
