--- a/ethical.tex
+++ b/ethical.tex
@@ -4,11 +4,12 @@ There are three points in the ethical consideration table [\ref{tbl:ethical-tabl
     \item Sensitive personal data processing
     \item Previously collected personal data processing
 \end{itemize}
-Every one of these points is due to the inclusion of datasets that are used to train Machine Learning models to test the Federated Learning techniques discussed in this paper.\\ \\
-These are in the form of the MNIST dataset that is publicly available for anyone to use. 
-For this data we do not have any identifiable information about any of the images and so it isn't personal in any way.
+Every one of these points is due to the inclusion of datasets that are used to train Machine Learning models to test the Federated Learning techniques discussed in this paper.
 \\ \\
-This then doesn't leave me with any ethical considerations as I don't need to worry about storing, sending, processing or any form of handling of this data as it is a public dataset with nothing that ends up being sensitive or personal. 
+These are in the form of the MNIST dataset that is publicly available for anyone to use. 
+For this data we do not have any identifiable information about any of the images and so it is not personal in any way.
+\\ \\
+This then does not leave me with any ethical considerations as I do not need to worry about storing, sending, processing or any form of handling of this data as it is a public dataset with nothing that ends up being sensitive or personal. 
 The participants involvement in the original data collection are then no longer relevant in the use of the data by other individuals and so no longer need to be considered.
 \\ \\
 However, I do just note them down as potential points of consideration for future work that might be undertaken with the work that I have contributed in this project.
