--- a/initial/investigations.tex
+++ b/initial/investigations.tex
@@ -1,20 +1,15 @@
 To find a baseline to build upon, we conduct some investigations into the current best methods of Robust Aggregation.
-However, aggregators like MKRUM, COMED and FedAvg don't have much complexity to them and as such don't have parameters that can be tuned.
+However, aggregators like MKRUM, COMED and FedAvg do not have much complexity to them and as such do not have much that can be tuned in a constructive manner.
 We look into several categories for initial testing such as AFA, FedMGDA+ and aggregator limitations. 
 AFA and FedMGDA+ are especially promising in their ability to block faulty/malicious clients. 
 It is also important to check how the the local rounds affect detectibility of these bad clients.
 \\ \\
 In this chapter we assume:
 \begin{itemize}
-    \item Faulty Clients: 1, 3, 5, 7, 9, 11, 13, 15 17, 19
-    \item Malicious Client: 2, 4, 6, 8, 10, 12, 14, 16, 18, 20
+    \item Faulty Clients: 1, 3, 5, 7, 9, 11, 13, 15 17, 19, etc.
+    \item Malicious Client: 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, etc.
     \item Mixed: first 5 of each
 \end{itemize}
-% Faulty Clients: 1, 3, 5, 7, 9, 11, 13, 15 17, 19
-% \\
-% Malicious Client: 2, 4, 6, 8, 10, 12, 14, 16, 18, 20
-% \\
-% Mixed: first 5 of each.
 \\
 The weighting given to each client as to how much data they get varies from about 2-4\% and is hard-coded in.
 \\ \\
@@ -31,7 +26,7 @@ We use IID data and are thus less affected, but in real-world situations missing
 
 \subsection{Parameters}
 \begin{enumerate}
-    \item Alpha: the numerator used in calculating the score of each client. Increments if the client doesn't give a bad update. Also used in blocking check via a beta cdf distribution.
+    \item Alpha: the numerator used in calculating the score of each client. Increments if the client does not give a bad update. Also used in blocking check via a beta cdf distribution.
     \item Beta: the denominator used in calculating the score of each client. Increments if the client gives a bad update. Also used in blocking check via a beta cdf distribution.
     \item Score: a value used for giving a model weighting in the overall model merging so that we know how much importance to assign each model.
     \item Xi: used as part of calculating whether or not a client should be classified as giving a bad update.
@@ -44,7 +39,7 @@ The results show:
 \begin{enumerate}
     \item 10 malicious clients caused the model to fail in all tests such that it never learned anything regardless of the parameters. [\ref{fig:mal_afa}]
     \item Having a xi value above two causes the initial threshold to be too weak and as such never blocks any clients. This is further shown by when the xi was 2 and the deltaXi was set to 0.75 but to less effect [\ref{fig:afa_2_0.75}]. 
-    However, the error rate did wobble and vary a bit between alpha/beta combos and so the model wasn't \textit{completely} destroyed, just not usable.
+    However, the error rate did wobble and vary a bit between alpha/beta combos and so the model was not \textit{completely} destroyed, just not usable.
     \item Lower xi and deltaXi values consistently performed the best and acted more just like a non-federated solution.
 \end{enumerate}
 
@@ -53,15 +48,15 @@ However, we observe that xi values that performed the best and blocked all of th
 Around 9-11 of the benign clients get blocked at some point in the training when the xi is one.
 \\ \\
 This is bad for non-obvious reasons. 
-In other aggregators, malicious/faulty clients simply don't get used or receive lower weightings. 
-So even if you are a benign client that has some weird data, you can still contribute in some manner or at least aren't branded as bad. 
-However, if a hospital gets blocked from contributing more data and isn't allowed access to the finalised model due to a faulty aggregation system, this could negatively impact its ability to provide quality healthcare.
+In other aggregators, malicious/faulty clients simply do not get used or receive lower weightings. 
+So even if you are a benign client that has some weird data, you can still contribute in some manner or at least are not branded as bad. 
+However, if a hospital gets blocked from contributing more data and is not allowed access to the finalised model due to a faulty aggregation system, this could negatively impact its ability to provide quality healthcare.
 \\ \\
 Furthermore, blocking off clients with more unique data may end up harming your model as it only learns the most common data (which can be warped from an attack quite easily!). This is also true in non-IID scenarios.
 \\ \\
 So we want to find the mix between blocking as few benign clients as possible (ideally none) and blocking as many bad clients as possible (ideally all), while reducing the error rate.
 Based on our tests, this leaves us with one option: a xi of two and a deltaXi of 0.25.
-This does make sense as we don't want drastic changes each time and so having the delta small at 0.25 works well. 
+This does make sense as we do not want drastic changes each time and so having the delta small at 0.25 works well. 
 This is further backed by the best alpha/beta to be both four [\ref{fig:best_afa}] as it then allows for smaller changes in division when calculating the score when the alpha/beta value gets changed.
 
 \begin{figure}[htbp]
@@ -107,17 +102,17 @@ It's noticeable that the LRs above 0.5 have essentially converged by round 10 to
 Alas, just like with AFA, the real information comes out in the grit of which clients were blocked and when.
 When you look at that, you see that all-bar-one benign client gets blocked in rounds one-three.
 Funnily enough, over these three rounds is exactly when all of the malicious clients get blocked as well.
-This pretty much leads me to believe that the malicious clients aren't getting blocked because they are actually being recognised as bad, but instead because the aggregator is deciding to block the clients en-mass.
+This pretty much leads me to believe that the malicious clients are not getting blocked because they are actually being recognised as bad, but instead because the aggregator is deciding to block the clients en-mass.
 It just so happens that the malicious ones are caught in the cross-fire of all of the mass blocking.
 \\ \\
 However, when we look at the lower end of the LR, we get much slower convergence but with absolutely no benign clients being blocked and all of the byzantine ones getting blocked.
-This would be cause for celebration if it wasn't taking the aggregator 46 rounds out of 50 to actual do the blocking...
+This would be cause for celebration if it was not taking the aggregator 46 rounds out of 50 to actual do the blocking...
 So, looking at lower numbers of epochs per round, we see that 1/2 looked like they work much better.
 They showed a mix of being able to block all of the malicious clients [\ref{fig:1epoch_grid}] and achieving a good, low error rate [\ref{fig:2epoch_grid}] but not quite both.
 These results tend to occur at around LRs of 0.01 to 0.05 and so further refinement needs to be done.
 
 \subsubsection{Refinement Needed}
-Looking into a more refined LR, we again notice that an epoch count of one produces results such that the malicious clients get blocked at great points such a round 16 or so but still don't converge to the ideal error rate.
+Looking into a more refined LR, we again notice that an epoch count of one produces results such that the malicious clients get blocked at great points such a round 16 or so but still do not converge to the ideal error rate.
 However, two does not block early enough or ends up blocking some benign clients.
 The latter ends up being quite an easy fix as these clients end up being blocked in around the 30\textsuperscript{th}-50\textsuperscript{th} round.
 The solution is to reduce the number of rounds that the aggregator runs for.
@@ -128,7 +123,7 @@ While we could have tried many LR update methods, such as a sinusoidal LR or one
 \\ \\ 
 A decreasing LR from the values of [0.1, 0.09, 0.08, 0.07, 0.06, 0.05] to [0.05, 0.04, 0.03, 0.02, 0.01] in a linear fashion proved to be the best course of action.
 This followed a fairly logical course of thought, such that you want to start out with a higher LR initially to help differentiate between the clients more.
-Later on you would then become more certain that the clients should be benign and so you don't need as high of a LR.
+Later on you would then become more certain that the clients should be benign and so you do not need as high of a LR.
 However, starting too high (\textgreater0.08) proved fruitless and ending too low just gave results that blocked clients later and later.
 The perfect balance here was around from a starting LR of 0.07 and ending up at 0.02 [\ref{fig:best_fedmgda+}], which caused the malicious clients to be blocked at around rounds 11-13.
 We also did some experiments with increasing LRs but not only did that follow less of a logical course of action, it subsequently did not provide any benefit or particularly good/useful results.
@@ -136,7 +131,7 @@ We also did some experiments with increasing LRs but not only did that follow le
 \begin{figure}[htbp]
     \centering
     \includegraphics[scale=0.7]{initial/graphs/best_fed_result.png}
-    \caption{The Error Rate graph from the best results from FedMGDA+. Notice that the performance doesn't change much but the main importance is the blocking.}
+    \caption{The Error Rate graph from the best results from FedMGDA+. Notice that the performance does not change much but the main importance is the blocking.}
     \label{fig:best_fedmgda+}
 \end{figure}
 
@@ -159,7 +154,7 @@ This caused such poor performance that other weaker aggregators like MKRUM were 
 \\ \\
 Another improvement made was to devise a standard deviation (std)-based approach where if the clients fell below a given threshold that would be two StDs from the mean then it would get blocked.
 This was done after noticing that it was quite common for the weights of the model to look something akin to [8, 8, 9, 7, 10, \textbf{2}, \textbf{3}, 7, 6, 8, \textbf{1}].
-Here the boldened numbers show weights of malicious clients that are very obviously malicious to our eyes but aren't being picked up due to not being negative or getting too low at all.
+Here the boldened numbers show weights of malicious clients that are very obviously malicious to our eyes but are not being picked up due to not being negative or getting too low at all.
 However, as seems commonplace at this point, an adaptive approach was needed.
 When we tried keeping it static, depending on the attack, either clients would not be getting blocked when they needed to be, or too many benign clients would be getting blocked unnecessarily. 
 We took a very similar approach to the LR in that when clients got blocked, we increased the multiple of the number of StDs from the mean that it would take before a client got blocked and we decreased the std multiplier whenever the error increased.
@@ -220,7 +215,7 @@ Speaking of AFA, that is the next to go at 12 faulty clients while COMED is the 
 AFA only lasts until about round 14 with the blocking but even then, it is not even blocking all of the faulty clients.
 Noticeably, faulty clients are much easier to detect it seems, but they also have far more damaging effects on the model as a whole much earlier on.
 \\ \\
-Something that was surprising was how when the aggregators stopped being able to work properly, they weren't just forming straight lines as with malicious clients.
+Something that was surprising was how when the aggregators stopped being able to work properly, they were not just forming straight lines as with malicious clients.
 Instead, the accuracy was a bit rough and oscillated [\ref{fig:15faulty}], as if there was still some attempt from the model to learn but it just got overwhelmed.
 
 
@@ -239,6 +234,6 @@ Especially as it is becoming more common to simply slap ML on something and call
 This is something that I aimed to do when I improved upon it and it really showed in the end.
 \\ \\
 One important thing to note is that while comparing Aggregators, they are not all competing for the same goal.
-COMED and MKRUM both don't aim to block malicious clients and as such don't have that more complex overhead of trying to do so correctly.
-So, even though it looks as if something like COMED outperforms all others, you could argue that it not blocking any clients means that it isn't on the same level as AFA and FedMGDA++.
+COMED and MKRUM both do not aim to block malicious clients and as such do not have that more complex overhead of trying to do so correctly.
+So, even though it looks as if something like COMED outperforms all others, you could argue that it not blocking any clients means that it is not on the same level as AFA and FedMGDA++.
 Ultimately, it is down to personal preference with how you want to deal with the byzantine clients but it is something to note when deciding on the aggregation strategy.
