--- a/intro.tex
+++ b/intro.tex
@@ -49,7 +49,7 @@ This might be harder to achieve in practice due to the sensitive nature of the d
     Finally, the accuracy and capability of the blocking is far better now, blocking most (if not all) of the malicious clients while pretty much never blocking benign clients.
     
     \item \textbf{Highlighting Limitations of Aggregators:}
-    Current robust aggregators aren't able to defend against free-riding clients, with certain ones (e.g. FedMGDA+) performing extra poorly on aggregation.
+    Current robust aggregators are not able to defend against free-riding clients, with certain ones (e.g. FedMGDA+) performing extra poorly on aggregation.
     This project also explains why and how they fail and explains that it could be due to a lack of understanding of the space.
     
     \item \textbf{Enhancing Aggregation through Clustering:}
@@ -57,14 +57,19 @@ This might be harder to achieve in practice due to the sensitive nature of the d
     This increases COMED's ability to block clients from aggregating with less than ideal accuracy with 15 malicious (out of a total of 30 clients) clients, all the way up to smoothly aggregating against 22 malicious with a much better accuracy.
     
     \item \textbf{Creating my own Robust Aggregator:}
-    Created a robust aggregator that outperforms all other popular robust aggregators.
+    Created a robust aggregator that outperforms all other robust aggregators tested (to date, theses are some of the best - SotA).
     Uses a combination of clustering, dimension reduction, personalisation and adaptiveness to create a robust algorithm for blocking up to 26 malicious / free-riding clients (out of a total of 30 clients).
     It does this to the extent where the error rate is similar to that of FedAvg without any malicious clients at all.
-    It is also the only aggregation method that currently does not allow any free-riders access to a good model and as such, the only system to not allow any information theft against free-riders (thereby ensuring they have a useless model).
+    It is also the only aggregation method that currently does not allow any free-riders access to any learned model and as such, the only system to not allow any information theft against free-riders (thereby ensuring the free-riders have a useless model).
     
     \item \textbf{Future Work:}
     This project includes some short, yet thorough, ideas and concepts that could be used to further the work done in this project.
-    Some of the content is specific to the work done here with FedPADRC and other content is just ideas and postulations that I had throughout the course of completing this project but weren't able to incorporate.
+    Some of the content is specific to the work done here with FedPADRC and other content is just ideas and postulations that I had throughout the course of completing this project but were not able to incorporate.
+    
+    \item \textbf{Codebase:}
+    The codebase associated with this project is not only open for anyone to use, but has been greatly improved upon (from previous versions) to allow greater extensibility with other robust aggregation or privacy preserving methods.
+    This was important so as to make sure other researchers and students could easily test the work done in this project on their own and integrate it freely into their own work for whatever their needs are.
+    The code is in a ready and workable state for anyone who wants to use it.
         
 \end{enumerate}
 
