--- a/my_agg/mine.tex
+++ b/my_agg/mine.tex
@@ -14,16 +14,16 @@ Throughout all that I wish to include in the aggregator, I name it FedPADRC (Per
 
 \section{Clustering}
 Initially, I thought about clustering similar models together through K-Means Clustering.
-Similar ideas like this have been tried already \cite{cluster_robagg} but didn't really attempt anything that I would personally call robust (even if they claimed otherwise).
+Similar ideas like this have been tried already \cite{cluster_robagg} but did not really attempt anything that I would personally call robust (even if they claimed otherwise).
 So, I wanted to build upon this idea by instead using some combination of FedAvg, COMED and MKRUM to do the aggregation.
-I couldn't really use AFA of FedMGDA++ as they both relied on learned information about the whole system.
+I could not really use AFA of FedMGDA++ as they both relied on learned information about the whole system.
 FedMGDA++ especially relied on having all the clients present at every step on never subsets of the clients.
 \\ \\ 
 However, robustly aggregating at only the clustering stage seemed like it would very easily be abused by a coordinated attack of malicious clients.
 This is because malicious clients would end up having similar models due to their coordinated attack strategy being the same.
 Therefore, there would always be at least one cluster of just malicious clients.
 Something like COMED might be able to handle this better but it was something definitely worth investigating.
-So, I would then also need to have robust aggregation happen when aggregating the cluster centres together to form the end model (something that hadn't been done before).
+So, I would then also need to have robust aggregation happen when aggregating the cluster centres together to form the end model (something that had not been done before).
 \\ \\
 Prior to any testing, one thing that is important to bring up is that K-Means Clustering is a very computationally intensive algorithm to run.
 Increasing the number of clients beyond the 30 here to systems with orders of magnitudes of more clients might not be a sustainable process.
@@ -51,15 +51,15 @@ This is most likely due to no interference from the malicious clients in the fir
 You can also clearly see that the model itself is over-fitting and should realistically only be lasting for 10-15 rounds or so.
 This would then help with the later stage spikes that we see.
 \\ \\
-It didn't quite end there though, as for some very strange reason, MKRUM's performance appeared to get better with more malicious clients being added.
+It did not quite end there though, as for some very strange reason, MKRUM's performance appeared to get better with more malicious clients being added.
 This was such that I was seeing performance from MKRUM being used as an external aggregator compared to COMED at more than 22 malicious clients.
-Now, this doesn't then lead me to believe that overall MKRUM performs better, just that it has its very unique and weird moments of performance.
+Now, this does not then lead me to believe that overall MKRUM performs better, just that it has its very unique and weird moments of performance.
 Overall, I believe that using FedAvg to aggregate the clients within the clusters and using COMED to aggregate the cluster centres is the best way forward.
 
 
 \subsection{Finding the Optimal K}
 When it comes to K-Means Clustering, finding the best K-value to use is extremely important to ensure that the data is properly split up and segmented.
-Luckily, it is not a particularly complex task and normally just requires testing out the different K-values and using something called the "Elbow Method" to determine which is the best.
+Luckily, it is not a particularly complex task and normally just requires testing out the different K-values and using something called the ``Elbow Method" to determine which is the best.
 \\ \\
 The elbow method is when you plot the the number of clusters against some distance/scoring metric.
 This could be their literal distance, sum of squared distances, based on accuracy etc.
@@ -79,7 +79,7 @@ So, realistically trying to get a rough idea of the values of K that would be mo
 \\ \\
 Funnily enough, there ended up not being any particular point that could be realistically identified as the elbow point.
 I did the above calculations for no attacks, 5 and 20 malicious at rounds 0, 5 and 20 [\ref{fig:k_elbow}].
-This was so that I was able to see how representation of the data changed throughout so I wasn't simply basing my analysis from 1 point.
+This was so that I was able to see how representation of the data changed throughout so I was not simply basing my analysis from 1 point.
 \\ \\
 \begin{figure}[htbp]
 	\centering
@@ -93,7 +93,7 @@ Under five malicious there were similar characteristics but with a slightly stee
 At 20 malicious is where things get weird and it is almost like a K of two is the best.
 \\ \\
 Interpreting these results is interesting to say the least, but one last method I can try is to see what the final and/or minimum error rate values are at each K and see if that can shed any more light on the situation.
-What I am expecting is that there won't be much difference with 0 attacks but having a good K value will be more and more important with 5 and 20 as that is where you'll see damage starting to be being done.
+What I am expecting is that there will not be much difference with 0 attacks but having a good K value will be more and more important with 5 and 20 as that is where you will see damage starting to be being done.
 \begin{center}
     \begin{longtable}{ |c|c|c|c|c|c|c|c|c|c|c|c|c| }
     \caption{Error Rate (\%) as K Changes}
@@ -112,7 +112,7 @@ What I am expecting is that there won't be much difference with 0 attacks but ha
     \end{longtable}
 \end{center}
 Through setting the number of rounds to 15 to stop over-fitting and remove the peaks near the end, we can now see how the solutions perform at various points in Table \ref{tbl:k_error_rate}.
-Seeing the no attack error rates really seemed to fit perfectly with the previous test done as the value doesn't change too much [\ref{fig:k_elbow_0}] except when K is two.
+Seeing the no attack error rates really seemed to fit perfectly with the previous test done as the value does not change too much [\ref{fig:k_elbow_0}] except when K is two.
 After about the halfway point, K seems to do a little worse as well on average, indicating that it's probably become too high (although it's very minimal).
 \\ \\
 Where things start to change a bit is when we increase the number of malicious clients to five.
@@ -135,16 +135,16 @@ This leads me to conclude that a K of around five is the optimal for this instan
 
 
 \section{Dimension Reduction}
-When it comes to clustering the data, performing it on the entire model's parameters is very much a noisy affair as there will be plenty of parameters that aren't very important.
+When it comes to clustering the data, performing it on the entire model's parameters is very much a noisy affair as there will be plenty of parameters that are not very important.
 What we then end up with, is a clustering that relies on a bunch of noise to be performed.
 For a point of reference, the MNIST model that I am using contains 535818 different parameters (with larger models getting into the millions).
 Realistically, there are only going to be a certain number of parameters that are actually useful and will contribute to the clustering properly.
 \\ \\
-Current methods through using a VAE exist but only alongside SAD and they don't fully utilise the pure lower-dimensional form that is created and is instead used for reconstruction.
+Current methods through using a VAE exist but only alongside SAD and they do not fully utilise the pure lower-dimensional form that is created and is instead used for reconstruction.
 Not only this, but the hyper-parameter fine-tuning that must go into such a model (e.g. number of layers, layer size etc.) provides a more variable solution that must be curated.
-They also require training to be accurate and so aren't going to be as effective early on in the aggregation.
+They also require training to be accurate and so are not going to be as effective early on in the aggregation.
 \\ \\
-However, that doesn't mean they aren't useful.
+However, that does not mean they are not useful.
 VAEs are great when you do want to reconstruct data (and maybe compare that way) but ultimately that is not the goal that I am trying to achieve here.
 This is where Principal Component Analysis (PCA) comes in.
 PCA is a quick and effective form of dimensionality reduction that can create a more concise representation of our models.
@@ -162,16 +162,16 @@ This works very nicely for us as we want to keep as much useful information as p
 \end{figure}
 \\ \\
 As seen in Figure \ref{fig:pca_00}, we can start to see that a dimension value of around one-four is probably the sweet spot.
-Other rounds later on [\ref{fig:pca_01}, \ref{fig:pca_02}] may appear to indicate that actually we don't want to perform PCA at all.
+Other rounds later on [\ref{fig:pca_01}, \ref{fig:pca_02}] may appear to indicate that actually we do not want to perform PCA at all.
 However, this pattern only really appears when there are no attacks present and as soon as we start adding some, it becomes more apparent [\ref{fig:pca_50}] that this is not the case.
 Instead, we end up seeing that a dimension value of one looks to be a pretty safe bet with some potential at rounds two-four.
 
 
 \subsection{Low Dimensional Beings}
-As has become apparent, relying on traditional methods to guarantee what the optimal values are, is not always the best idea.
+As has become apparent, relying on traditional methods to guarantee what the optimal values are is not always the best idea.
 So, to help further guarantee that the low PCA dimension values are correct, let's plot the coordinates of the PCA transforms of these values and see how they compare.
-We can only do this in 1D, 2D, 3D and 4D but seeing as it theoretically shouldn't need to go beyond this anyway, it should be fine.
-It should be noted that the 4th dimensions is represented by size of the plotted points in the graphs.
+We can only do this in 1D, 2D, 3D and 4D but seeing as it theoretically should not need to go beyond this anyway, it should be fine.
+It should be noted that the 4th dimension is represented by the size of the plotted points in the graphs.
 \\ \\
 With no attacks you get pretty much what you would expect [\ref{fig:0mal_dims}] and all 4 dimensions show to add some level of useful information.
 When we start adding attacks, we would expect that the most information gain happens from 1D and that is pretty much what you get at an initial glance.
@@ -186,7 +186,7 @@ When we start adding attacks, we would expect that the most information gain hap
 As shown in Figures \ref{fig:5mal_dims} \& \ref{fig:20mal_dims}, we see that the remaining three dimensions all have the malicious clients placed in the middle of the same region [\ref{fig:4d_diff}] in their respective dimensions.
 However, what becomes important is the scattering of the benign clients.
 In all other dimensions they are far more unique, which lends them to not be clustered with the malicious clients even if the first dimension were to fail at separating the two groups.
-This is also seen in practice, where the accuracy of 1D solutions tends to end up including more malicious clients as time goes on, showing that the segmentation isn't working as well as the Explained Variance would have you believe.
+This is also seen in practice, where the accuracy of 1D solutions tends to end up including more malicious clients as time goes on, showing that the segmentation is not working as well as the Explained Variance would have you believe.
 
 \begin{figure}[htbp]
 	\centering
@@ -197,19 +197,19 @@ This is also seen in practice, where the accuracy of 1D solutions tends to end u
 \\ \\
 This is most likely due to the global aggregation sharing the global model out to every client, softening the malicious clients and making them appear more benign in the process.
 This causes their PCA transform values to spread out more, increasing the likelihood that more clusters will be assigned to them.
-This \textit{can} be mitigated through increasing the number of epochs per round (that's why 10 is used instead of two) but it isn't a perfect solution.
+This \textit{can} be mitigated through increasing the number of epochs per round (that's why 10 is used instead of two) but it is not a perfect solution.
 We are currently able to fix this through using four dimensions for the PCA but there is obviously something about 1D PCA that seems so tempting.
 \\ \\
-Increasing the number of dimensions doesn't really fix this and at higher dimensions (e.g. 10 [\ref{fig:dim10_26mal}] or 29 [\ref{fig:dim29_26mal}]) we still some spiking at later federated rounds.
-The error rate is also not as smooth and is more susceptible to be jagged throughout, indicating that the current algorithm isn't as robust.
+Increasing the number of dimensions does not really fix this and at higher dimensions (e.g. 10 [\ref{fig:dim10_26mal}] or 29 [\ref{fig:dim29_26mal}]) we still some spiking at later federated rounds.
+The error rate is also not as smooth and is more susceptible to be jagged throughout, indicating that the current algorithm is not as robust.
 
 
 
 \section{Personalisation}
 We nicely fall in the lap of federated learning personalisation.
 We have hypothesised that the 1D PCA option might not be working as well simply because the malicious clients are getting good updates that makes them appear more benign over the course of the federated rounds.
-This can be seen in Figure \ref{fig:mal_spread} as the spread is more segmented in 2D while in 4D there is only 1 dimension of spread that is much less segmented
-So ideally, we don't want to give any malicious client a global update that will inevitably work against the benign clients.
+This can be seen in Figure \ref{fig:mal_spread} as the spread is more segmented in 2D, while in 4D there is only 1 dimension of spread that is much less segmented.
+So ideally, we do not want to give any malicious client a global update that will inevitably work against the benign clients.
 \begin{figure}[htbp]
 	\centering
     \includegraphics[scale=0.24]{my_agg/graphs/mal_spread.png}
@@ -218,7 +218,7 @@ So ideally, we don't want to give any malicious client a global update that will
 \end{figure}
 \\ \\
 This is where the idea of personalisation comes in.
-We either don't want to update certain clients or simply update them with less useful information that is specific to them.
+We either do not want to update certain clients or simply update them with less useful information that is specific to them.
 This also gives us the capability to not have to use COMED to do the robust aggregation as we would already be robustly aggregating in the first place.
 However, it may end up being more beneficial to also use COMED on top of this.
 
@@ -249,7 +249,7 @@ There are 4 main ways that I have come up with to achieve this, with the names t
     
     \item No Global Model (no global): if we were to just not aggregate the clusters' models together, then in theory each client would get a more personalised model that was best suited to them.
     It would also keep all of the malicious clients building their own malicious model while all of the benign clients build their own separate ones.
-    This would help minimise any form of cross-over between the clusters but it wouldn't allow for as much model generalisation.
+    This would help minimise any form of cross-over between the clusters but it would not allow for as much model generalisation.
     Depending on each client's end goal, this might not be an issue at all.
 \end{enumerate}
 
@@ -260,7 +260,7 @@ Although they can be used independently, it might be more beneficial to use some
 \subsection{Adaptive Weighting of Clusters}
 To decide which clusters are deemed the ``best" and what weighting each cluster is given, there are 2 main scoring metrics for doing so.
 One is in the form of Cosine Similarity and the other is a simple sum of squared differences between the parameter weights.
-Seeing as the magnitude of the values in our data (the model parameters) matters, Cosine similarity might not be the best option as this isn't taken into account.
+Seeing as the magnitude of the values in our data (the model parameters) matters, Cosine similarity might not be the best option as this is not taken into account.
 However, graphs of the PCA transform data do tend to put the benign clients' values on a similar angle to each other and so it may still be a suitable metric.
 \\ \\
 To do either of these methods, you need to have a starting point as a point of reference to do the calculations from.
@@ -273,7 +273,7 @@ The pseudocode for this is outlined in Algorithm \ref{alg:my_alg}.
 \\ \\
 This weighting algorithm is used in all of the first three methods and is crucial in deciding the best models to choose from.
 One part on Line 36 should be noted as maybe not being a solution that should be incorporated every time.
-In the instance where a malicious cluster is being used in aggregation when it shouldn't be, where there are a lot of malicious clients, this weighting could cause much more drastic effects than without it.
+In the instance where a malicious cluster is being used in aggregation when it should not be, where there are a lot of malicious clients, this weighting could cause much more drastic effects than without it.
 \\ \\
 
 
@@ -345,32 +345,32 @@ To recap, I also wanted to achieve better aggregation through personalisation fo
 I tested selective, general, selective with thresholding, general with thresholding and no global as forms of personalisation.
 
 \subsection{4D Personalisation}
-I made sure to try with 4D PCA first, so as to make sure that I wasn't going to be losing any performance with the discussed methods.
+I made sure to try with 4D PCA first, so as to make sure that I was not going to be losing any performance with the discussed methods.
 There was also the need to test both COMED and FedAvg at both levels of aggregation, as this would hopefully lead to being able to not need COMED to do the robust aggregation and then hopefully purely relying on personalisation techniques.
 This would enable greater generalisation capabilities that would hopefully allow more non-IID data to be aggregated better.
 \\ \\ 
 With COMED, we saw typically really good performance with the clients only starting to fail with use of the general method under 24 malicious clients [\ref{fig:4d_24mal}].
 With FedAvg, we see the same level of performance with the selective methods but under general, the no thresholding method fails pretty quickly at five malicious clients [\ref{fig:4d_5mal}] while the thresholding method fails at around 15 [\ref{fig:4d_15mal}].
-This makes me realise that the general method is one that just doesn't perform to the same standard as without personaliation.
+This makes me realise that the general method is one that just does not perform to the same standard as without personaliation.
 \\ \\
 This is most likely because with general, we are still updating the malicious clients with a model, even if it is not as good as the selective model.
-It can also cause the benign client that isn't participating in the selective update to become more similar to that of the malicious clients, causing there to be increased chances of leakage.
+It can also cause the benign client that is not participating in the selective update to become more similar to that of the malicious clients, causing there to be increased chances of leakage.
 This is even without the fact that with no thresholding, you are then still just aggregating with the malicious clients at every step, and so nothing too robust is even happening.
-Therefore, proceeding with the general method for 1D would be futile and so won't be considered further.
+Therefore, proceeding with the general method for 1D would be futile and so will not be considered further.
 
 
 
 \subsection{1D Personalisation}
-Once I removed the generalisation from the testing, with both COMED and AFA I got pretty much the same results across the board.
-Through all levels of malicious clients, with and without thresholding, the selective method held up throughout [\ref{fig:1d_26mal}].
+Once I removed the generalisation from the testing, with both COMED and AFA, I got pretty much the same results across the board.
+The selective method held up throughout all levels of malicious clients, with and without thresholding [\ref{fig:1d_26mal}].
 This was great to see as this was a great win in terms of being able to use FedAvg for the aggregation instead of COMED, allowing greater data use.
 \\ \\
-This helps definitively prove that personalisation helps with the robustness of the algorithm and as such, should be treated as an essential part of the process.
+These results help to definitively prove that personalisation assists with the robustness of the algorithm and as such, should be treated as an essential part of the process.
 
 
 \subsection{No Global}
 As much as has been shown that the selective method works well, what if there were more than one attack or more than one type of attack present?
-In this case, it may end up being the case that you don't want to do any aggregation amongst the clusters at all for the fear of being damaged from too many angles.
+In this case, it may end up being the case that you do not want to do any aggregation amongst the clusters at all for the fear of being damaged from too many angles.
 \\ \\
 This is where the no global method shines.
 It is essentially a more strict version of the selective algorithm in that there is only aggregation taking place within each cluster and not between the clusters themselves.
@@ -400,16 +400,16 @@ For the selective method, it might be harder but the goal is to have the free-ri
 This allows for some leniency hopefully but at the same time there is more risk associated with that there is an increased chance of them stealing a good model if they are included in the selected group.
 Either way, seeing how FedPADRC handles free-riders by itself as well as with malicious clients is what I shall test.
 \\ \\
-The no global method is the first testing point as if it can't work here, then it won't be able to handle the more lenient selective method.
-I am also doing the testing with 4D PCA just to make sure that it isn't that causing any potential problems.
+The no global method is the first testing point as if it cannot work here, then it will not be able to handle the more lenient selective method.
+I am also doing the testing with 4D PCA just to make sure that it is not that that is causing any potential problems.
 \\ \\
 What ends up occurring is something quite magical and yet so obvious!
-The free-riders get the same global model that is sent out at the very start of the process but they can't really make any realistic changes to it.
+The free-riders get the same global model that is sent out at the very start of the process but they cannot really make any realistic changes to it.
 Therefore, every other client (whether or not it is malicious) will do some form of learning.
 This then has a great distinctive effect of having the free-riders all look the same [\ref{fig:10mal10free_rep}] \textit{as well as} not being similar in any shape or form to the rest of the clients.
 As such, it never even gets the opportunity to learn even a little bit, meaning that the free-riders fail in their goal [\ref{fig:no_15free}] as well as there being no intellectual property theft.
-What's also good is that there wasn't even 1 free-rider that managed to sneak into the other clusters at any count of free-riders, they remained separate at all times.
-
+What is also good is that there was not even 1 free-rider that managed to sneak into the other clusters at any count of free-riders, they remained separate at all times.
+\\ \\
 \begin{figure}[htbp]
 	\centering
     \includegraphics[scale=0.5]{my_agg/graphs/10mal_10free_r0_no_global.png}
@@ -417,7 +417,7 @@ What's also good is that there wasn't even 1 free-rider that managed to sneak in
 	\label{fig:10mal10free_rep}
 \end{figure}
 \\ \\
-It might end up being the case that FedPADRC isn't able to handle more than just one style of attack at any given time.
+It might end up being the case that FedPADRC is not able to handle more than just one style of attack at any given time.
 Alas, that is not the case!
 Even when there is a combination of free-riders and malicious clients present [\ref{fig:no_13free_13mal}], it is not hindered in any-way-shape-or-form.
 All that then happens is that there are two clusters that have awful performance with the three benign clusters making up all of the remaining benign clients.
