final version 2: electric boogaloo

--- a/background/federated.tex
+++ b/background/federated.tex
@@ -21,7 +21,7 @@ This involves a high initial cost as there is computing power needed for trainin
 This also does not mean that researchers outside of the hospital will even be able to use the data anyway, just that the Clinicians, Patients, Manufacturers and Healthcare providers can all benefit from the improvement of the ML-based systems \cite{future_health_fl}.
 
 \subsection{Training}
-The process of training the data for Fl is as follows and is shown graphically in Figure \ref{fig:federated_learning}:
+The process of training the data for FL is as follows and is shown graphically in Figure \ref{fig:federated_learning}:
 \begin{enumerate}
     \item Clients retrieve model from the central server.
     
