--- a/intro.tex
+++ b/intro.tex
@@ -1,4 +1,4 @@
-All work done is contained within my GitHub repository \href{https://github.com/SamuelTrew/FederatedLearning}{here} with all of the results from all of the experiments/investigations performed found \href{https://github.com/SamuelTrew/FYP_Results}{here}.
+All work done is contained within my GitHub repository \footnote{\href{https://github.com/SamuelTrew/FederatedLearning}{https://github.com/SamuelTrew/FederatedLearning}} with all of the results from all of the experiments/investigations performed in a separate repository \footnote{\href{https://github.com/SamuelTrew/FYP_Results}{https://github.com/SamuelTrew/FYP\_Results}}.
 
 \section{Motivation}
 The use of Machine Learning (ML) to enhance user experiences, to provide fantastic tools, or to be able to make accurate predictions all require large amounts of data --- this is normally collected by a single body/organisation.
@@ -57,7 +57,7 @@ This might be harder to achieve in practice due to the sensitive nature of the d
     This increases COMED's ability to block clients from aggregating with less than ideal accuracy with 15 malicious (out of a total of 30 clients) clients, all the way up to smoothly aggregating against 22 malicious with a much better accuracy.
     
     \item \textbf{Creating my own Robust Aggregator:}
-    Created a robust aggregator that outperforms all other robust aggregators tested (to date, theses are some of the best - SotA).
+    Created a novel robust aggregator that outperforms all other robust aggregators tested (to date, theses are some of the best - SotA).
     Uses a combination of clustering, dimension reduction, personalisation and adaptiveness to create a robust algorithm for blocking up to 26 malicious / free-riding clients (out of a total of 30 clients).
     It does this to the extent where the error rate is similar to that of FedAvg without any malicious clients at all.
     It is also the only aggregation method that currently does not allow any free-riders access to any learned model and as such, the only system to not allow any information theft against free-riders (thereby ensuring the free-riders have a useless model).
