--- a/main.tex
+++ b/main.tex
@@ -32,12 +32,12 @@
 \begin{abstract}
 Federated Learning is a promising solution for distributed machine learning  that is able to operate without users parting ways with their data. This is done by aggregating models together to form a ``global model" that represents the sum of the users' contributions.
 \\ \\
-However, the lack of knowledge by the overarching system of what data an individual user possesses, opens this system up to vulnerabilities. Attackers can act maliciously, faulty users can damage their local model, and models are at risk of theft.
+However, the lack of knowledge by the overarching system of what data an individual user possesses opens this system up to vulnerabilities. Attackers can act maliciously, faulty users can damage their local model, and models are at risk of theft.
 
-So, ensuring that the aggregation strategy is robust, is of paramount importance.
+So, ensuring that the aggregation strategy is robust is of paramount importance.
 Unfortunately, current methods of robust aggregation lack full understanding of this space and so are not able to fully protect the users from all of the variety of attacks present.
 \\ \\
-This paper will cover various forms of robust aggregation and attacks, as well as some more simple methods to enhance current existing approaches.
+This project will cover various forms of robust aggregation and attacks, as well as some more simple methods to enhance existing approaches.
 It will also introduce a solution to fully enhancing robust aggregation (from more attack vectors) called FedPADRC, which uses clustering and other techniques to enhance the robust aggregation process.
 \end{abstract}
 
@@ -45,17 +45,17 @@ It will also introduce a solution to fully enhancing robust aggregation (from mo
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Acknowledgements}
 I would like to thank Dr Amir Alansary [\ref{amir}] for helping and guiding me through this project, as well as giving me a reading group to discuss and learn more about Federated Learning. 
-Thank you also to Dr Jonathan Passerat-Palmbach [\ref{jon}] for also hosting this reading group.
+Thank you also to Dr Jonathan Passerat-Palmbach [\ref{jon}] for hosting this reading group.
 \\ \\
 The notes, slides and general lecture material/teaching from modules such as Privacy Engineering and Introduction to Machine Learning have proved to be invaluable in my general understanding of Machine Learning and Privacy Preserving techniques. So, I would like to thank the relevant lecturers for this.
 \\ \\
-There are also my flatmates, who helped try and make sure that what I wrote is not illegible and incomprehensible, as if it was written by an enthusiastic child telling a story.
+There are also my flatmates, who helped to try and make sure that what I wrote is not illegible and incomprehensible, as if it was written by an enthusiastic child telling a story.
 \\ \\
 I would also like to thank my family for supporting me through my entire education and being the reason that it has all culminated with me sitting here writing this today.
 \\ \\
 Without my friends on Discord I surely would have lost the plot long ago and so I am thankful to them for keeping me sane.
 \\ \\
-Finally, I would like to thank my girlfriend for putting up with me and the lack of attention I gave her over these past few weeks and months while I attempt to finish my degree.
+Finally, I would like to thank my girlfriend for putting up with me and the lack of attention I have given her over these past few weeks and months while I attempt to finish my degree.
 
 \clearpage{\pagestyle{empty}}
 
